// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/access-stats/AccessStatsItemsList should render access stats list with button props 1`] = `
<ul
  className="access-stats-list"
>
  <AccessStatsItem
    count={10}
    hasCountOverflowed={false}
    statButtonProps={
      {
        "preview": 1,
      }
    }
    type="preview"
  />
  <AccessStatsItem
    count={10}
    hasCountOverflowed={false}
    statButtonProps={
      {
        "edit": 1,
      }
    }
    type="edit"
  />
  <AccessStatsItem
    count={10}
    hasCountOverflowed={false}
    statButtonProps={
      {
        "comment": 1,
      }
    }
    type="comment"
  />
  <AccessStatsItem
    count={10}
    hasCountOverflowed={false}
    statButtonProps={
      {
        "download": 1,
      }
    }
    type="download"
  />
</ul>
`;

exports[`features/access-stats/AccessStatsItemsList should render download access stats properly when item is box notes 1`] = `
<ul
  className="access-stats-list"
>
  <AccessStatsItem
    count={0}
    hasCountOverflowed={false}
    statButtonProps={{}}
    type="view"
  />
  <AccessStatsItem
    count={0}
    hasCountOverflowed={false}
    statButtonProps={{}}
    type="edit"
  />
  <AccessStatsItem
    count={0}
    hasCountOverflowed={false}
    statButtonProps={{}}
    type="comment"
  />
</ul>
`;

exports[`features/access-stats/AccessStatsItemsList should render preview access stats properly when item is not box notes 1`] = `
<ul
  className="access-stats-list"
>
  <AccessStatsItem
    count={100}
    hasCountOverflowed={false}
    statButtonProps={{}}
    type="preview"
  />
  <AccessStatsItem
    count={0}
    hasCountOverflowed={false}
    statButtonProps={{}}
    type="edit"
  />
  <AccessStatsItem
    count={0}
    hasCountOverflowed={false}
    statButtonProps={{}}
    type="comment"
  />
  <AccessStatsItem
    count={0}
    hasCountOverflowed={false}
    statButtonProps={{}}
    type="download"
  />
</ul>
`;

exports[`features/access-stats/AccessStatsItemsList should render view access stats properly when item is box notes 1`] = `
<ul
  className="access-stats-list"
>
  <AccessStatsItem
    count={100}
    hasCountOverflowed={false}
    statButtonProps={
      {
        "value": 1,
      }
    }
    type="view"
  />
  <AccessStatsItem
    count={0}
    hasCountOverflowed={false}
    statButtonProps={{}}
    type="edit"
  />
  <AccessStatsItem
    count={0}
    hasCountOverflowed={false}
    statButtonProps={{}}
    type="comment"
  />
</ul>
`;
